fixed login/signup text not being left aligned

--- a/static/style.css
+++ b/static/style.css
@@ -14,8 +14,6 @@ main {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 60px;
 }
@@ -57,6 +55,7 @@ main {
   border: 1px solid transparent;
   border-radius: .25rem;
   transition: all .1s ease-in-out;
+  text-align: left;
 }
 
 .form-label-group input::-webkit-input-placeholder {
